# flashbacker-mcp

./: .dockerignore  .task-workflow.md  B00T_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  README.md  SESSION_PROGRESS.md  docker-compose.yml  flashbacker-mcp  justfile  tasks.jsonl  test-proxy.js
.github/workflows/: docker-build-push.yml
_b00t_/: flashbacker.mcp.toml
agents/: ecosystem.config.js
agents/scripts/: captain.py  specialist_agent.py
commercerack-rust/: Cargo.toml  Dockerfile
commercerack-rust/crates/api/: Cargo.toml
commercerack-rust/crates/api/src/: auth.rs  lib.rs
commercerack-rust/crates/api/src/routes/: cart.rs  customers.rs  mod.rs  orders.rs  products.rs
commercerack-rust/crates/api/tests/: integration.rs
commercerack-rust/crates/cart/: Cargo.toml
commercerack-rust/crates/cart/src/: lib.rs
commercerack-rust/crates/customer/src/: address.rs  lib.rs  lib_sqlx.rs.bak
commercerack-rust/crates/order/: Cargo.toml
commercerack-rust/crates/order/src/: lib.rs
commercerack-rust/crates/product/: Cargo.toml
commercerack-rust/crates/product/src/: lib.rs  lib_sqlx.rs.bak  sku.rs
docs/: DOCKER.md
infra/k0s/: main.tf
registry/: README.md
registry/schemas/: tool-opinions.schema.toml
registry/tools/: flashbacker.opinions.toml
