[package]
name = "commercerack-cart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
commercerack-db = { path = "../db" }
commercerack-product = { path = "../product" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
