[package]
name = "commercerack-order"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
commercerack-db = { path = "../db" }
sea-orm.workspace = true
entity = { path = "../../entity" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
